--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -6454,3 +6454,55 @@
     } 
 }
 
+
+.product-color{
+    display: flex;
+
+    margin-top: 33px;
+    .color-title{
+        margin-right: 30px;
+        text-transform: uppercase;
+    }
+
+        .color-block{
+            width: 16px;
+            height: 16px;
+            border-radius: 50%;
+            margin-right: 10px;
+
+            .color-item{
+                width: 16px;
+                height: 16px;
+                border-radius: 50%;
+                margin-right: 10px;
+    
+            &.not-current-color{
+               
+                position: absolute;
+                bottom: 15%;
+                left: 12%;
+                width: 10px;
+                height: 10px;
+            }
+        }
+        }
+
+        .color-block{
+            border: none;
+
+            &.not_active{
+                border: 1px solid #E6E6E6;
+                position: relative;
+            }
+        }
+
+
+    
+
+    .color-name{
+        margin-left: 32px;
+        text-transform: uppercase;
+    }
+}
+
+
