--- a/wp-content/themes/anomeo/assets/scss/_information.scss
+++ b/wp-content/themes/anomeo/assets/scss/_information.scss
@@ -1,11 +1,26 @@
 .information__container{
     padding: 60px;
     font-family: 'Din Pro Light';
-    width: 70%;
+    width: 60%;
+
+    @include media-breakpoint-down(sm) {
+        padding: 21px 37px;
+    }
+
+    &.cookies{
+        .information__subtitle{
+            font-family: 'Din Pro Light';
+            color:#6C6D6E;
+            text-transform: uppercase;
+        }
+    }
     .information__title{
         color:#15818b;
         margin-bottom: 35px;
         font-size: 36px;
+        @include media-breakpoint-down(sm) {
+            font-size: 28px;
+        }
     }
     .information__subtitle{
         font-family: 'Din Pro Bold';
