--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -5720,7 +5720,7 @@
     }
 
     .about_content {
-        padding: 70px;
+        padding: 0 192px  65px var(--ak-main-spacing);
         background-color: #F2F8F9;
         width: 50%;
         display: flex;
@@ -5735,7 +5735,8 @@
         .about-title {
             color: #128796;
             font-size: 36px;
-            width: 60%;
+            font-family: "Din Pro";
+            margin-bottom: 41px;
 
             @include media-breakpoint-down(sm) {
                 width: 100%;
@@ -5748,7 +5749,6 @@
             color: #6C6D6E;
             font-family: "Din Pro Light";
             font-size: 16px;
-            width: 70%;
 
             @include media-breakpoint-down(sm) {
                 width: 100%;
