--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -181,12 +181,13 @@
     }
 
     .icon-menu-item {
-        &:hover{
-            .text{
+        &:hover {
+            .text {
                 opacity: 1;
                 visibility: visible;
             }
         }
+
         a {
             display: flex;
             align-items: center;
@@ -194,10 +195,10 @@
             height: 100%;
             justify-content: center;
 
-            
+
         }
 
-        .text{
+        .text {
             color: #138997;
             font-size: 12px;
             text-transform: uppercase;
@@ -686,7 +687,7 @@
 
                 img {
                     width: 100%;
-                   height: 230px;
+                    height: 230px;
                     max-width: 175px;
                     margin: 0 auto;
                     object-fit: cover;
@@ -709,9 +710,10 @@
                     margin-bottom: 30px;
                     margin-left: 25px;
 
-                    .top{
+                    .top {
                         display: flex;
-                        .title{
+
+                        .title {
                             font-size: 16px;
                             font-family: 'Din Pro Light';
                             color: #6C6D6E;
@@ -720,7 +722,7 @@
                             width: 70%;
                         }
 
-                        .price{
+                        .price {
                             font-size: 16px;
                             font-family: 'Din Pro';
                             color: #128796;
@@ -731,7 +733,7 @@
                         }
                     }
 
-                    .remove_from_cart_button{
+                    .remove_from_cart_button {
                         text-transform: none;
                         margin-top: 23px;
 
@@ -740,7 +742,7 @@
                         font-family: 'Din Pro Light';
                     }
 
-                    
+
 
                 }
 
@@ -752,12 +754,14 @@
 
                     .qty-buttons {
                         display: flex;
-                        p{
+
+                        p {
                             color: #6C6D6E;
                             font-size: 16px;
                             text-transform: none;
                             font-family: "Din Pro Light";
                         }
+
                         .cart-item-qty-btn {
                             color: #6C6D6E;
                             cursor: pointer;
@@ -778,27 +782,28 @@
                     }
                 }
 
-               .yith-wcwl-add-to-wishlist{
-                   img{
-                       width: 6px;
-                       height: 6px;
-                   }
-               }
-
-               .product-img{
-                   position: relative;
-                   
-                   .yith-wcwl-add-to-wishlist{
-                       margin-top: 0;
-
-                       .delete_item, .add_to_wishlist{
-                        position: absolute;
+                .yith-wcwl-add-to-wishlist {
+                    img {
                         width: 6px;
-                        right: 13px;
-                        top: 5px;
-                       }
-                   }
-               }
+                        height: 6px;
+                    }
+                }
+
+                .product-img {
+                    position: relative;
+
+                    .yith-wcwl-add-to-wishlist {
+                        margin-top: 0;
+
+                        .delete_item,
+                        .add_to_wishlist {
+                            position: absolute;
+                            width: 6px;
+                            right: 13px;
+                            top: 5px;
+                        }
+                    }
+                }
             }
 
             &__checkout-btn {
@@ -837,7 +842,7 @@
                 }
             }
 
-            
+
         }
     }
 
@@ -1577,10 +1582,11 @@
     &__pagination.swiper-pagination-bullets {
         display: none;
         position: absolute;
-        height: 10px; 
+        height: 10px;
         bottom: 40px;
         right: 0;
-        left: auto;;
+        left: auto;
+        ;
         width: auto;
         transform: translateX(-50%);
 
@@ -1985,8 +1991,8 @@
     .home-products-slider {}
 }
 
-.desktop-menu-btn{
-    p{
+.desktop-menu-btn {
+    p {
         position: absolute;
         top: 2px;
         font-size: 11px;
@@ -1994,8 +2000,8 @@
     }
 }
 
-.icon-menu-item.cart-item{
-    .text{
+.icon-menu-item.cart-item {
+    .text {
         position: absolute;
         bottom: 5px;
     }
@@ -3877,7 +3883,7 @@
         color: #148D9A;
         font-family: 'Din Pro Light';
 
-        .register{
+        .register {
             font-family: 'Din Pro Bold';
         }
     }
@@ -4653,7 +4659,7 @@
         }
     }
 
-    
+
 
     .woocommerce-billing-fields {
         &__fields-wrapper {
@@ -5387,9 +5393,7 @@
     }
 
     &__col {
-        @include media-breakpoint-up(sm) {
-          
-        }
+        @include media-breakpoint-up(sm) {}
 
         &--left {
             @include media-breakpoint-up(sm) {}
@@ -5402,8 +5406,8 @@
 
             border-right: 1px solid #EAEAEA;
 
-            input{
-                width: 70%!important;
+            input {
+                width: 70% !important;
             }
         }
 
@@ -5720,7 +5724,7 @@
     }
 
     .about_content {
-        padding: 0 192px  65px var(--ak-main-spacing);
+        padding: 0 192px 65px var(--ak-main-spacing);
         background-color: #F2F8F9;
         width: 50%;
         display: flex;
@@ -5958,6 +5962,11 @@
 
         .page-title__container {
             padding-bottom: 130px;
+            padding-top: 36px;
+
+            p {
+                font-family: "Din Pro Light";
+            }
 
             @include media-breakpoint-down(sm) {
                 padding-bottom: 70px;
@@ -5965,7 +5974,8 @@
         }
 
         .page-title__subtitle {
-            margin-bottom: 24px;
+            margin-bottom: 21px;
+            font-family: "Din Pro"!important;
 
             @include media-breakpoint-down(sm) {
                 font-size: 28px;
@@ -5973,7 +5983,7 @@
         }
 
         .contact_social {
-            margin-top: 85px;
+            margin-top: 90px;
         }
 
         .contact_social--img {
@@ -5994,12 +6004,28 @@
         width: 50%;
         background-color: #F2F8F9;
         padding: 43px var(--ak-main-spacing) 0;
+        padding-top: 63px;
 
         @include media-breakpoint-down(sm) {
             width: 100%;
             padding: 0 var(--ak-main-spacing) 180px;
 
         }
+
+
+        p {
+            font-family: "Din Pro Light";
+            @include media-breakpoint-down(sm) {
+                font-size: 16px;
+            }
+        }
+
+
+        h1 {
+            font-family: "Din Pro";
+
+        }
+
 
 
     }
@@ -6228,6 +6254,7 @@
 
             .button {
                 margin-top: 20px;
+
                 a {
                     font-family: 'Din Pro Bold';
                     color: #fff;
@@ -6240,71 +6267,75 @@
             }
         }
 
-        .bottom{
-            .popular-products-slider__button-next{
+        .bottom {
+            .popular-products-slider__button-next {
                 display: flex;
                 cursor: pointer;
-                p{
+
+                p {
                     color: #138796;
                     font-size: 20px;
                     font-family: 'Din Pro Light';
                     margin-bottom: 0;
                 }
 
-                img{
+                img {
                     width: 30px;
                     height: 19px;
                     margin-right: 13px;
                 }
-                
+
             }
         }
     }
 }
 
-.popular-products{
-    .swiper-slide{
-        width: 350px!important;
+.popular-products {
+    .swiper-slide {
+        width: 350px !important;
         margin: 0 38px;
     }
 
-    .add_to_wishlist, .delete_item{
+    .add_to_wishlist,
+    .delete_item {
         position: absolute;
         right: 4%;
         top: 32px;
-        img{
+
+        img {
             width: 19px;
             height: 17px;
         }
     }
 
-    .popular__slider-product-bottom{
+    .popular__slider-product-bottom {
         width: 55%;
-        .slider-product__name{
+
+        .slider-product__name {
             color: #6C6D6E;
             font-size: 20px;
             font-family: 'Din Pro Light';
             margin-bottom: 17px;
         }
-    
-        .slider-product__price{
+
+        .slider-product__price {
             color: #128796;
             font-size: 20px;
             font-family: 'Din Pro';
         }
     }
 
-    img{
+    img {
         height: auto;
         width: 100%;
     }
 
-    
+
 }
 
-.site-cart{
+.site-cart {
 
-    .total-row{
+    .total-row {
         display: flex;
         justify-content: space-between;
         margin-bottom: 22px;
@@ -6313,7 +6344,8 @@
         font-size: 18px;
         text-transform: none;
     }
-    .total{
+
+    .total {
         width: 233px;
         display: flex;
         flex-direction: column;
@@ -6324,9 +6356,10 @@
     }
 }
 
-.thank-you{
+.thank-you {
     margin: 22px 38px 470px;
-    .title{
+
+    .title {
         color: #128796;
         font-size: 36px;
         font-family: "Din Pro Bold";
@@ -6340,25 +6373,26 @@
 
     }
 
-    .item{
+    .item {
         display: flex;
         flex-direction: column;
 
-        .item-title{
+        .item-title {
             color: #128796;
             font-size: 20px;
             font-family: "Din Pro Bold";
         }
 
-        .item-content{
+        .item-content {
             color: #F89D3F;
             font-size: 20px;
             font-family: "Din Pro Light";
         }
     }
 }
-.woocommerce-checkout{
-    .r-wrap{
+
+.woocommerce-checkout {
+    .r-wrap {
         padding: 0;
     }
 
@@ -6368,32 +6402,33 @@
         }
 
     }
-} 
+}
 
-.woocommerce-checkout{
-    &.checkout{
-        padding-left: var(--ak-main-spacing);;
+.woocommerce-checkout {
+    &.checkout {
+        padding-left: var(--ak-main-spacing);
+        ;
     }
 }
 
-.woocommerce-checkout-review-order{
-    .ak-checkout__product-item{
+.woocommerce-checkout-review-order {
+    .ak-checkout__product-item {
         display: flex;
         margin-bottom: 14px;
 
-        img{
+        img {
             width: 175px;
             height: 231px;
             object-fit: cover;
         }
 
-        .description-col{
+        .description-col {
             margin-left: 24px;
 
-            .product-title{
+            .product-title {
                 display: flex;
 
-                .title{
+                .title {
                     width: 60%;
 
                     font-size: 16px;
@@ -6403,7 +6438,7 @@
                     margin-bottom: 0;
                 }
 
-                .price{
+                .price {
                     width: 40%;
                     text-align: end;
 
@@ -6412,7 +6447,7 @@
                 }
             }
 
-            .qty-buttons{
+            .qty-buttons {
                 display: flex;
                 align-items: baseline;
 
@@ -6423,16 +6458,16 @@
                 font-family: "Din Pro Light";
                 color: #6C6D6E;
 
-                p{
+                p {
                     margin-bottom: 0;
                 }
 
-                button{
+                button {
                     color: #6C6D6E;
                 }
             }
 
-            .remove{
+            .remove {
                 font-size: 14px;
                 color: #128796;
                 font-family: "Din Pro Light";
@@ -6440,44 +6475,46 @@
         }
     }
 
-    .yith-wcwl-add-to-wishlist{
+    .yith-wcwl-add-to-wishlist {
 
         img {
             width: 6px;
             height: 6px;
         }
 
-        .delete_item, .add_to_wishlist{
+        .delete_item,
+        .add_to_wishlist {
             position: absolute;
             right: 42%;
         }
-    } 
+    }
 }
 
 
-.product-color{
+.product-color {
     display: flex;
 
     margin-top: 33px;
-    .color-title{
+
+    .color-title {
         margin-right: 30px;
         text-transform: uppercase;
     }
 
-        .color-block{
+    .color-block {
+        width: 16px;
+        height: 16px;
+        border-radius: 50%;
+        margin-right: 10px;
+
+        .color-item {
             width: 16px;
             height: 16px;
             border-radius: 50%;
             margin-right: 10px;
 
-            .color-item{
-                width: 16px;
-                height: 16px;
-                border-radius: 50%;
-                margin-right: 10px;
-    
-            &.not-current-color{
-               
+            &.not-current-color {
+
                 position: absolute;
                 bottom: 15%;
                 left: 12%;
@@ -6485,24 +6522,22 @@
                 height: 10px;
             }
         }
+    }
+
+    .color-block {
+        border: none;
+
+        &.not_active {
+            border: 1px solid #E6E6E6;
+            position: relative;
         }
-
-        .color-block{
-            border: none;
-
-            &.not_active{
-                border: 1px solid #E6E6E6;
-                position: relative;
-            }
-        }
+    }
 
 
-    
 
-    .color-name{
+
+    .color-name {
         margin-left: 32px;
         text-transform: uppercase;
     }
 }
-
-
