product fix, wishlist

--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -6643,3 +6643,15 @@
         text-transform: uppercase;
     }
 }
+
+.yith-wcwl-add-to-wishlist{
+    position: absolute;
+    right: 13%;
+    top: 20px;
+    z-index: 2;
+
+    img{
+        width: 19px;
+        height: 17px;
+    }
+}
