--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -1536,7 +1536,13 @@
         font-family: "Din Pro";
         max-width: 65%;
 
-        @include media-breakpoint-down(sm) {}
+        @include media-breakpoint-down(sm) {
+            font-size: 40px;
+            bottom: 100px;
+
+            width: 300px;
+            max-width: 85%;
+        }
 
 
         p {
@@ -1555,6 +1561,15 @@
             padding: 10px 20px;
             border-radius: 22px;
             background-color: #F89D3F;
+
+            @include media-breakpoint-down(sm) {
+                left: 0;
+                bottom: -40px;
+                padding: 13px 30px;
+
+                font-size: 20px;
+            }
+            
         }
 
         &.block-item {
@@ -1827,6 +1842,11 @@
 
         @include media-breakpoint-up(sm) {
             flex-direction: row;
+        }
+
+        @include media-breakpoint-down(sm) {
+            padding: var(--ak-main-spacing) 0 calc(var(--ak-main-spacing) *2) 0;
+            height: auto;
         }
 
         &__image {
@@ -2606,7 +2626,7 @@
 
         &__item {
             position: relative;
-            height: 0!important;
+            height: 0 !important;
             padding-top: 100%;
             width: 100%;
 
@@ -3132,6 +3152,7 @@
     display: block;
     overflow: hidden;
     border-top: 1px solid #EAEAEA;
+
     @include media-breakpoint-down(sm) {
         border-top: none;
     }
@@ -3142,6 +3163,7 @@
 
         width: 100%;
         height: 100%;
+
         @include media-breakpoint-down(sm) {
             display: block;
             margin-top: 27px;
@@ -3152,6 +3174,7 @@
         min-height: 420px;
         overflow: hidden;
         width: 36%;
+
         @include media-breakpoint-down(sm) {
             width: 100%;
             min-height: auto;
@@ -3173,7 +3196,7 @@
         flex-direction: column;
         justify-content: space-between;
         padding: 50px var(--ak-main-spacing);
-       
+
 
         text-transform: uppercase;
 
@@ -3198,6 +3221,7 @@
 
             .title-item {
                 width: 60%;
+
                 @include media-breakpoint-down(sm) {
                     width: 100%;
                 }
@@ -3215,6 +3239,7 @@
                 width: 30%;
 
                 margin-bottom: 20px;
+
                 @include media-breakpoint-down(sm) {
                     width: 100%;
                     text-align: start;
@@ -3233,6 +3258,7 @@
 
             width: 70%;
             margin: 40px 0;
+
             @include media-breakpoint-down(sm) {
                 width: 100%;
                 margin: 27px 0 75px;
@@ -3601,7 +3627,7 @@
                         cursor: pointer;
                     }
 
-                    .category-name{
+                    .category-name {
                         margin-top: 38px;
                         background-color: #F89D3F;
                         border-radius: 22px;
@@ -3611,9 +3637,9 @@
                         font-size: 12px;
                         width: fit-content;
                     }
-                    
-                    
-                    
+
+
+
                 }
 
                 &--right {
@@ -3691,21 +3717,23 @@
     }
 
     .related-posts {
-        &.mobile{
+        &.mobile {
             display: none;
+
             @include media-breakpoint-down(sm) {
                 display: block;
 
-                .section-title{
+                .section-title {
                     padding-bottom: 15px;
                 }
 
-                .related-post__button-next{
+                .related-post__button-next {
                     display: flex;
                     cursor: pointer;
 
                     padding-left: var(--ak-main-spacing);
-                    p{
+
+                    p {
                         color: #128796;
                         font-size: 20px;
                         font-family: 'Din Pro Light';
@@ -3713,14 +3741,15 @@
                         margin-bottom: 0;
                     }
 
-                    img{
+                    img {
                         width: 30px;
                         height: 18px;
                     }
                 }
             }
         }
-        &.desktop{
+
+        &.desktop {
             @include media-breakpoint-down(sm) {
                 display: none;
             }
@@ -4228,6 +4257,10 @@
 
 
                 padding: 30px var(--ak-main-spacing);
+
+                @include media-breakpoint-down(sm) {
+                    padding: 30px 0;
+                }
             }
 
             a.view {
@@ -4244,7 +4277,7 @@
         color: #128796;
         font-family: 'Din Pro Bold';
 
-        tr{
+        tr {
             border-bottom: 1px solid #EAEAEA;
         }
 
@@ -4255,14 +4288,13 @@
         }
 
 
-        .woocommerce-orders-table__header{
+        .woocommerce-orders-table__header {
             font-weight: 300;
             padding-bottom: 15px;
 
-            &:not(:last-of-type) {
-                
-            }
-            &:first-of-type{
+            &:not(:last-of-type) {}
+
+            &:first-of-type {
                 padding-left: var(--ak-main-spacing);
             }
         }
@@ -4280,19 +4312,19 @@
                 padding-left: var(--ak-main-spacing);
             }
 
-            &-order-actions{
+            &-order-actions {
                 display: flex;
                 flex-direction: column;
 
-                .pay{
+                .pay {
                     padding-bottom: 11px;
                 }
 
-                .cancel{
+                .cancel {
                     padding-top: 11px;
                 }
 
-                a{
+                a {
                     font-size: 16px;
                     color: #F89D3F;
                     font-family: 'Din Pro';
@@ -5622,19 +5654,27 @@
     &--title {
         font-family: "Din Pro Bold";
         font-size: 20px;
+        @include media-breakpoint-down(sm) {
+            padding-left: var(--ak-main-spacing);
+        }
     }
 
     &--content {
         font-family: "Din Pro";
         font-size: 36px;
         width: 60%;
+        @include media-breakpoint-down(sm) {
+            width: 100%;
+            font-size: 28px;
+            padding: 0 var(--ak-main-spacing);
+        }
     }
 }
 
 
 .color_bg {
     padding: 10px 10px 4px;
-    border-radius: 22px;
+    border-radius: 25px;
 
     &.orange {
         background-color: #f79c3f;
@@ -5650,12 +5690,28 @@
     justify-content: space-between;
     height: 38px;
     background-color: #f79c3f;
+    @include media-breakpoint-down(sm) {
+       align-items: center;
+       padding-left: var(--ak-main-spacing);
+    }
 
     .home-orange-block__text {
         color: #fff;
         font-family: 'Din Pro Light';
         font-size: 20px;
         padding: 9px 69px;
+        @include media-breakpoint-down(sm) {
+            padding: 0;
+            margin-bottom: 0;
+
+            font-size: 17px;
+
+            &:last-child{
+                display: none;
+            }
+        }
+
+        
     }
 }
 
@@ -5664,11 +5720,18 @@
     font-size: 72px;
     font-family: "Din Pro Bold";
     margin-bottom: 0 !important;
+    @include media-breakpoint-down(sm) {
+        font-size: 70px;
+     }
 }
 
 .home-category-block-content {
     font-size: 36px;
     font-family: "Din Pro";
+    @include media-breakpoint-down(sm) {
+        font-size: 30px;
+     }
+
 }
 
 
@@ -5753,7 +5816,7 @@
             color: #fff;
             background-color: #15818b;
             border-radius: 25px;
-            padding: 5px 10px;
+            padding: 8px 9px 6px;
             font-size: 12px;
         }
     }
@@ -5796,6 +5859,10 @@
     background-color: #09616d;
     padding: 30px 60px;
     color: #fff;
+
+    @include media-breakpoint-down(sm) {
+        display: none;
+    }
 
     .blue-block__content {
         display: flex;
@@ -6308,7 +6375,17 @@
 .woocommerce-account.logged-in {
     .r-wrap {
         padding-right: var(--ak-main-spacing);
-        ;
+
+
+
+    }
+
+    .page__content-section {
+        .r-wrap {
+            @include media-breakpoint-down(sm) {
+                padding-right: 0;
+            }
+        }
     }
 }
 
@@ -6344,6 +6421,10 @@
             text-transform: uppercase;
 
             width: 40%;
+
+            @include media-breakpoint-down(sm) {
+                width: 100%;
+            }
         }
     }
 }
@@ -6352,6 +6433,10 @@
     display: flex;
     padding: var(--ak-main-spacing);
     padding-right: 0;
+
+    @include media-breakpoint-down(sm) {
+        display: none;
+    }
 
     .first-block {
         display: flex;
@@ -6659,25 +6744,25 @@
 }
 
 
-.ak-product-item{
-    .yith-wcwl-add-to-wishlist{
+.ak-product-item {
+    .yith-wcwl-add-to-wishlist {
         position: absolute;
         right: 13%;
         top: 20px;
         z-index: 2;
-    
-        img{
+
+        img {
             width: 19px;
             height: 17px;
         }
     }
 }
 
-.more-info{
+.more-info {
     border-top: 1px solid rgba(18, 135, 149, .5);
     border-bottom: 1px solid rgba(18, 135, 149, .5);
 
-    &__title{
+    &__title {
         font-family: 'Din Pro Light';
         font-size: 16px;
         color: #6C6D6E;
@@ -6685,7 +6770,8 @@
 
         margin-bottom: 0;
         cursor: pointer;
-        &:after { 
+
+        &:after {
             content: '';
             background-size: 17px 17px;
             background-image: url('/wp-content/themes/anomeo/assets/img/Details_product_dektop-02.svg');
@@ -6697,44 +6783,48 @@
             transition: all .3s;
         }
 
-        &.change{
-            &:after { 
+        &.change {
+            &:after {
                 transform: rotate(45deg)
             }
         }
     }
 
-    .details-block{
+    .details-block {
         border-bottom: 1px solid rgba(18, 135, 149, .5);
     }
 
-    .more-info__text{
-        display:none;
+    .more-info__text {
+        display: none;
     }
 
 }
 
-.order-title{
+.order-title {
     margin-top: 45px;
     margin-bottom: 75px;
     padding-left: var(--ak-main-spacing);
+    @include media-breakpoint-down(sm) {
+        padding-left: 0;
+    }
 }
 
-.woocommerce-orders{
-    .page__content-section{
-        .r-wrap{
-            padding-left: 0!important;
-            .page-template-template-account{
-                thead{
+.woocommerce-orders {
+    .page__content-section {
+        .r-wrap {
+            padding-left: 0 !important;
+
+            .page-template-template-account {
+                thead {
                     padding-left: var(--ak-main-spacing);
                 }
 
-                tbody{
+                tbody {
                     padding-left: var(--ak-main-spacing);
                 }
             }
-        
+
         }
     }
-    
+
 }
