--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -1760,6 +1760,12 @@
         right: var(--ak-main-spacing);
         left: auto;
 
+        .desktop{
+            @include media-breakpoint-down(sm) {
+                display: none;
+            }
+        }
+
         &:after {
             background-image: url("../img/arrow.svg");
         }
@@ -6434,8 +6440,10 @@
     padding: var(--ak-main-spacing);
     padding-right: 0;
 
+    position: relative;
+
     @include media-breakpoint-down(sm) {
-        display: none;
+        flex-direction: column;
     }
 
     .first-block {
@@ -6443,14 +6451,23 @@
         flex-direction: column;
         justify-content: space-between;
 
-        width: 20%;
+        width: 21%;
         margin-right: 281px;
+
+        @include media-breakpoint-down(sm) {
+            width: 100%;
+            margin-right: 0;
+        }
 
         .top {
             .title {
                 color: #128796;
                 font-size: 70px;
-                font-family: "Din Pro Bold"
+                font-family: "Din Pro Bold";
+
+                @include media-breakpoint-down(sm) {
+                    margin-bottom: 57px;                
+                }
             }
 
             .button {
@@ -6469,9 +6486,15 @@
         }
 
         .bottom {
-            .popular-products-slider__button-next {
+            .popular-products-slider__button-next,
+            .popular-products-slider__button-prev {
                 display: flex;
                 cursor: pointer;
+
+                opacity: 1;
+                visibility: visible;
+
+                transition: all 0.3s;
 
                 p {
                     color: #138796;
@@ -6484,9 +6507,54 @@
                     width: 30px;
                     height: 19px;
                     margin-right: 13px;
+                    @include media-breakpoint-down(sm) {
+                        width: 40px;
+                        height: 25px;
+                    }
+                }
+
+                &.swiper-button-disabled{
+                    opacity: 0;
+                    visibility: hidden;
                 }
 
             }
+
+            .popular-products-slider__button-prev{
+                img {
+                    transform: rotate(180deg);
+                }
+
+                @include media-breakpoint-down(sm) {
+                    position: absolute;
+                    left: -10px;
+                }
+            }
+
+            .popular-products-slider__button-next{
+                @include media-breakpoint-down(sm) {
+                    position: absolute;
+                    right: -23px;
+                    top: 0;
+                }
+            }
+            
+
+            @include media-breakpoint-down(sm) {
+                z-index: 9;
+                position: absolute;
+                // right: 60px;
+                top: 55%;       
+                width: 275px;       
+            }
+        }
+    }
+
+    .second-block{
+        width: 60%;
+        @include media-breakpoint-down(sm) {
+            width: 100%;     
+            margin-top: 81px;           
         }
     }
 }
@@ -6495,6 +6563,10 @@
     .swiper-slide {
         width: 350px !important;
         margin: 0 38px;
+        @include media-breakpoint-down(sm) {
+           margin-left: 0;   
+           width: 275px !important;          
+        }
     }
 
     .add_to_wishlist,
@@ -6510,7 +6582,15 @@
     }
 
     .popular__slider-product-bottom {
+        display: flex;
+        flex-direction: column;
+
+        margin-top: 29px;
         width: 55%;
+
+        @include media-breakpoint-down(sm) {
+            margin-top: 75px;
+        }
 
         .slider-product__name {
             color: #6C6D6E;
@@ -6827,4 +6907,8 @@
         }
     }
 
+}
+
+.popular-product{
+    overflow: hidden;
 }
